[tool.poetry]
name = "tangle"
version = "0.1.0"
description = "IOTA Tangle DAG python implementation"
authors = ["yehoyada <hvuhsg5@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
networkx = "^2.8.3"
matplotlib = "^3.5.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
